# GPU_LAB_UniStuttgart_SS2022

./: CMakeLists.txt  README.md  Report_GPULAB_Team2.docx
src/: DisparityMap.cl  DisparityMap.cpp
src/cpu/: DisparityCPUImpl.cpp  DisparityCPUImpl.h
src/gpu/: OpenCLConfig.cpp  OpenCLConfig.h
